# nw-sys

./: .gitignore  Cargo.toml  README.md
src/: app.rs  clipboard.rs  error.rs  global.rs  lib.rs  menu.rs  menu_item.rs  nw.rs  options.rs  prelude.rs  result.rs  screen.rs  shell.rs  shortcut.rs  tray.rs  utils.rs  window.rs
src/chrome/: notifications.rs
