[package]
name = "nw-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/nw-sys"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
exclude = ["/.*", "/test"]
keywords = ["nw","nwjs","node-webkit"]
categories = ["wasm","api-bindings"]
description = """
Raw `wasm_bindgen` bindings for the NWJS API.
Additional APIs for NWJS-base application development 
are available via the `workflow-nw` crate.
"""

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
thiserror = "1.0.38"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'console',
    'Document',
    'Window',
    'HtmlElement',
    'HtmlIFrameElement'
]
