[package]
name = "nw-sys"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/nw-sys"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
exclude = ["/.*", "/test"]
keywords = ["nw","nwjs","node-webkit"]
categories = ["wasm","api-bindings"]
description = """
Raw wasm_bindgen bindings for the NWJS API.
"""

[dependencies]
js-sys = "0.3.61"
thiserror = "1.0.38"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
    'console',
    'Document',
    'Window',
    'HtmlElement',
    'HtmlIFrameElement'
]
